# LeCanardIA

./: .gitignore  CMakeLists.txt  MyBot.cpp  debug_start.txt  make.bat
HaliteAI/: HaliteAI.vcxproj  HaliteAI.vcxproj.filters
HaliteAI/Bot/: blackboard.cpp  blackboard.hpp  bot_constants.hpp  bot_parameters.hpp  bot_player.cpp  bot_player.hpp  fsm.cpp  fsm.hpp  map_utils.cpp  map_utils.hpp  move_request.hpp  ship_fsm.cpp  ship_fsm.hpp  ship_states.cpp  ship_states.hpp  traffic_manager.cpp  traffic_manager.hpp  utils.cpp  utils.hpp
